fix: subcategory text nowrap

--- a/src/shared/components/UI/CategoriesDropdown/SubNav/sub-nav.module.scss
+++ b/src/shared/components/UI/CategoriesDropdown/SubNav/sub-nav.module.scss
@@ -30,6 +30,7 @@
 	display: flex;
 	justify-self: flex-start;
 	text-transform: uppercase;
+	white-space: nowrap;
 	line-height: 30px;
 	font-size: 14px;
 	font-weight: $weight-medium;
